Update to use Java 11