@@ -1,6 +1,5 @@
 package restfulbooker.api.dto.booking.search;
 
-import com.google.common.collect.ImmutableMap;
 import restfulbooker.api.dto.booking.Booking;
 
 import java.util.Map;
@@ -12,13 +11,13 @@ public class SearchParamsMapper {
     }
 
     public static Map<String, String> namesOfBooking(Booking booking) {
-        return ImmutableMap.of(
+        return Map.of(
                 "firstname", booking.firstname,
                 "lastname", booking.lastname);
     }
 
     public static Map<String, String> datesOfBooking(Booking booking) {
-        return ImmutableMap.of(
+        return Map.of(
                 "checkin", booking.bookingdates.checkin,
                 "checkout", booking.bookingdates.checkout);
     }
